refactoring of book management