@@ -1,5 +1,7 @@
 package com.k48.lib48.service;
 
+import com.k48.lib48.dto.BookRequestDTO;
+import com.k48.lib48.dto.BookUpDateDTO;
 import com.k48.lib48.models.Book;
 import com.k48.lib48.models.Category;
 import com.k48.lib48.myEnum.EtatLivre;
@@ -39,95 +41,60 @@ public class BookServices {
         return book;
     }
 
-    public List<Book> getBooksByAuthor(String author) {
-        List<Book> books = bookRespo.findByAuteurIgnoreCase(author);
-        if (books.isEmpty()) {
-            throw new NoSuchElementException("Book not found");
-        }
-        return books;
-    }
-
-    public List<Book> getBooksByEditeur(String editeur) {
-        List<Book> books = bookRespo.findByEditeurIgnoreCase(editeur);
-        if (books.isEmpty()) {
-            throw new NoSuchElementException("Book not found");
-        }
-        return books;
-    }
-
-    public List<Book> getBooksByEtatLivre(EtatLivre etatLivre) {
-        List<Book> books = bookRespo.findByEtatLivre(etatLivre);
-        if (books.isEmpty()) {
-            throw new NoSuchElementException("Book not found");
-        }
-        return books;
-    }
-
     public List<Book> getBooksByCategorieNom(String nomCategorie) {
         Category category = categoryRepo.findByNomIgnoreCase(nomCategorie);
         if (category == null) {
             throw new NoSuchElementException("Category not found");
         }
-        return bookRespo.findByCategory(category);
+        return bookRespo.findAllByCategory(category);
     }
 
-    public Book createBook(Book book) {
-        // Validation titre obligatoire
-        if (book.getTitre() == null || book.getTitre().trim().isEmpty()) {
+    public void createBook(EtatLivre livreEtat, long idCategory, BookRequestDTO   bookRequestDTO) {
+        
+        // Validation du titre: il ne peut être ni null ni vide
+        if (bookRequestDTO == null || bookRequestDTO.titre() == null || bookRequestDTO.titre().isBlank()) {
             throw new IllegalArgumentException("The Title cannot be null or empty");
         }
-
-        // Gestion catégorie
-        if (book.getCategory() == null) {
-            throw new IllegalArgumentException("The Category must be specified");
+        
+        //Trouver la categorie
+        Optional<Category> categoryOpt = categoryRepo.findById(idCategory);
+        if (categoryOpt.isEmpty()) {
+            throw new NoSuchElementException("Category not found");
         }
-
-        Category category = book.getCategory();
-
-        if (category.getId() != null && category.getId() > 0) {
-            // Recherche catégorie existante par ID
-            category = categoryRepo.findById(category.getId())
-                    .orElseThrow(() -> new NoSuchElementException("Category not found with id: "));
-        } else if (category.getNom() != null && !category.getNom().trim().isEmpty()) {
-            // Pas d'id, recherche par nom puis création sinon
-            Category existingCategory = categoryRepo.findByNomIgnoreCase(category.getNom().trim());
-            if (existingCategory != null) {
-                category = existingCategory;
-            } else {
-                Category newCategory = new Category();
-                newCategory.setNom(category.getNom().trim());
-                category = categoryRepo.save(newCategory);
-            }
-        } else {
-            throw new IllegalArgumentException("Category must have either a valid id or a non-empty name");
-        }
-
+        
+        Category category = categoryOpt.get();
+        
+        Book book = new Book();
+        
+        book.setTitre(bookRequestDTO.titre());
+        book.setAuteur(bookRequestDTO.auteur());
+        book.setEstDisponible(true);
+        book.setEditeur(bookRequestDTO.editeur());
+        book.setEtatLivre(livreEtat);
         book.setCategory(category);
-
-        // Pour forcer création JPA (attention si id est primitif long => changer en Long dans Book)
-
-        return bookRespo.save(book);
+        
+        categoryRepo.save(category);
+        
+        bookRespo.save(book);
     }
 
-    public Book updateBook(Book book) {
-        Book existingBook = bookRespo.findById(book.getId())
+    public Book updateBook(long id, EtatLivre livreEtat , long idCategory ,BookUpDateDTO bookUpDateDTO) {
+        Book existingBook = bookRespo.findById(id)
                 .orElseThrow(() -> new NoSuchElementException("Book not found"));
-
-        existingBook.setTitre(book.getTitre());
-        existingBook.setAuteur(book.getAuteur());
-        existingBook.setEditeur(book.getEditeur());
-        existingBook.setDisponible(book.isDisponible());
-        existingBook.setEtatLivre(book.getEtatLivre());
-        existingBook.setIsbn(book.getIsbn());
-        existingBook.setDatePublication(book.getDatePublication());
-
-        if (book.getCategory() != null) {
-            Long categoryId = book.getCategory().getId();
-            Category category = categoryRepo.findById(categoryId)
-                    .orElseThrow(() -> new NoSuchElementException("Category not found"));
-            existingBook.setCategory(category);
+        
+        Optional<Category> category =  categoryRepo.findById(idCategory);
+        if (category.isEmpty()){
+            throw new NoSuchElementException("Category not found ");
         }
 
+        existingBook.setTitre(bookUpDateDTO.titre());
+        existingBook.setAuteur(bookUpDateDTO.auteur());
+        existingBook.setEstDisponible(bookUpDateDTO.estDisponible());
+        existingBook.setEditeur(bookUpDateDTO.editeur());
+        existingBook.setEtatLivre(livreEtat);
+        existingBook.setCategory(category.get());
+     
+        
         return bookRespo.save(existingBook);
     }
 
